--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Courier New', monospace;
-            background: #d4c5a0;
+            background: #d4c5a0 url('background-texture.jpg') center/cover fixed;
             background-image: 
                 repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px),
                 repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px);
