--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
         body {
             font-family: 'Courier New', monospace;
             background: #d4c5a0 url('background-texture.jpg') center/cover fixed;
-            background-image: 
-                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px),
-                repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(0,0,0,.03) 2px, rgba(0,0,0,.03) 4px);
             color: #2a2a2a;
             overflow-x: hidden;
         }
@@ -28,10 +25,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: 
-                radial-gradient(circle at 20% 30%, rgba(101, 67, 33, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 70%, rgba(101, 67, 33, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 40% 80%, rgba(139, 90, 43, 0.1) 0%, transparent 40%);
+            background: transparent;
             pointer-events: none;
             z-index: 0;
         }
@@ -260,7 +254,7 @@
 
         @media (max-width: 768px) {
             .logo {
-                font-size: 2.5rem;
+                max-width: 600px;
             }
 
             h2 {
@@ -281,12 +275,6 @@
     <div class="stars" id="stars"></div>
 
     <header>
-        <!-- 
-        LOGO IMAGE INSTRUCTIONS:
-        1. Save your logo image as "murphy-logo.png" 
-        2. Place it in the same folder as this index.html file
-        3. The logo will automatically display and pulse below
-        -->
         <img src="murphy-logo.png" alt="The Murphy Experiment" class="logo">
         <div class="tagline">Progressive Rock</div>
         <div class="location">Tempe, Arizona • Bangor, Northern Ireland | Est. 2022</div>
@@ -311,14 +299,6 @@
         <div class="album-section">
             <h2>Latest Release</h2>
             <div style="display: flex; flex-direction: column; align-items: center; gap: 30px; margin-bottom: 30px;">
-                <!-- 
-                ALBUM COVER IMAGE INSTRUCTIONS:
-                1. Save your album cover image as "boney-files-cover.jpg" 
-                2. Place it in the same folder as this index.html file
-                3. The image will automatically display below
-                
-                Alternative: You can also upload to an image host (like imgur) and replace the src with that URL
-                -->
                 <img src="boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.4);">
                 <div style="text-align: center;">
                     <div class="album-title">The Boney Files</div>
@@ -408,19 +388,6 @@
     </footer>
 
     <script>
-        // Create animated stars
-        const starsContainer = document.getElementById('stars');
-        for (let i = 0; i < 100; i++) {
-            const star = document.createElement('div');
-            star.className = 'star';
-            star.style.width = Math.random() * 3 + 'px';
-            star.style.height = star.style.width;
-            star.style.left = Math.random() * 100 + '%';
-            star.style.top = Math.random() * 100 + '%';
-            star.style.animationDelay = Math.random() * 3 + 's';
-            starsContainer.appendChild(star);
-        }
-
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
