--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             align-items: center;
             text-align: center;
             padding: 20px;
-            background: radial-gradient(circle at center, rgba(101, 67, 33, 0.15) 0%, transparent 70%);
+            background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%);
         }
 
         .logo {
@@ -61,15 +61,17 @@
 
         .tagline {
             font-size: 1.3rem;
-            color: #654321;
+            color: #3d2813;
             margin-bottom: 10px;
             font-style: italic;
+            font-weight: bold;
         }
 
         .location {
             font-size: 1rem;
-            color: #8b5a2b;
+            color: #5a3a1a;
             margin-bottom: 40px;
+            font-weight: bold;
         }
 
         .cta-button {
@@ -98,6 +100,8 @@
             left: 50%;
             transform: translateX(-50%);
             animation: bounce 2s infinite;
+            color: #3d2813;
+            font-weight: bold;
         }
 
         @keyframes bounce {
@@ -114,44 +118,48 @@
 
         h2 {
             font-size: 2.5rem;
-            color: #654321;
+            color: #3d2813;
             margin-bottom: 30px;
             text-align: center;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+            font-weight: bold;
         }
 
         .about-content {
-            background: rgba(245, 230, 211, 0.7);
+            background: rgba(245, 230, 211, 0.95);
             padding: 40px;
             border-radius: 20px;
-            border: 2px solid rgba(101, 67, 33, 0.3);
+            border: 3px solid rgba(101, 67, 33, 0.6);
             backdrop-filter: blur(10px);
             line-height: 1.8;
             font-size: 1.1rem;
-            color: #2a2a2a;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            color: #1a1a1a;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
         .album-section {
-            background: rgba(245, 230, 211, 0.6);
+            background: rgba(245, 230, 211, 0.95);
             padding: 60px 40px;
             border-radius: 20px;
             text-align: center;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+            border: 3px solid rgba(101, 67, 33, 0.6);
         }
 
         .album-title {
             font-size: 3rem;
-            color: #8b5a2b;
+            color: #3d2813;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+            font-weight: bold;
         }
 
         .album-subtitle {
             font-size: 1.3rem;
-            color: #654321;
+            color: #5a3a1a;
             font-style: italic;
             margin-bottom: 30px;
+            font-weight: bold;
         }
 
         .album-details {
@@ -162,27 +170,28 @@
         }
 
         .detail-card {
-            background: rgba(212, 197, 160, 0.6);
+            background: rgba(212, 197, 160, 0.9);
             padding: 30px;
             border-radius: 15px;
-            border: 1px solid rgba(101, 67, 33, 0.3);
+            border: 2px solid rgba(101, 67, 33, 0.5);
             transition: all 0.3s;
         }
 
         .detail-card:hover {
             transform: translateY(-5px);
-            border-color: rgba(101, 67, 33, 0.6);
-            box-shadow: 0 10px 30px rgba(101, 67, 33, 0.2);
+            border-color: rgba(101, 67, 33, 0.8);
+            box-shadow: 0 10px 30px rgba(101, 67, 33, 0.3);
         }
 
         .detail-card h3 {
-            color: #654321;
+            color: #3d2813;
             margin-bottom: 15px;
             font-size: 1.5rem;
+            font-weight: bold;
         }
 
         .detail-card p {
-            color: #4a3319;
+            color: #2a2a2a;
             line-height: 1.6;
         }
 
@@ -194,27 +203,29 @@
         }
 
         .member-card {
-            background: rgba(245, 230, 211, 0.8);
+            background: rgba(245, 230, 211, 0.95);
             padding: 30px;
             border-radius: 15px;
-            border: 2px solid rgba(101, 67, 33, 0.3);
+            border: 3px solid rgba(101, 67, 33, 0.6);
             text-align: center;
             transition: all 0.3s;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
         .member-card:hover {
-            border-color: rgba(101, 67, 33, 0.6);
+            border-color: rgba(101, 67, 33, 0.8);
             transform: scale(1.05);
         }
 
         .member-name {
             font-size: 1.5rem;
-            color: #654321;
+            color: #3d2813;
             margin-bottom: 10px;
+            font-weight: bold;
         }
 
         .member-role {
-            color: #8b5a2b;
+            color: #5a3a1a;
             font-size: 1rem;
         }
 
@@ -227,29 +238,32 @@
         }
 
         .social-link {
-            background: rgba(245, 230, 211, 0.6);
+            background: rgba(245, 230, 211, 0.95);
             padding: 20px 30px;
             border-radius: 10px;
-            border: 2px solid rgba(101, 67, 33, 0.3);
-            color: #654321;
+            border: 3px solid rgba(101, 67, 33, 0.6);
+            color: #3d2813;
             text-decoration: none;
             transition: all 0.3s;
             font-size: 1.1rem;
+            font-weight: bold;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
         .social-link:hover {
-            background: rgba(139, 90, 43, 0.3);
+            background: rgba(139, 90, 43, 0.5);
             border-color: #654321;
-            color: #2a2a2a;
+            color: #1a1a1a;
             transform: translateY(-3px);
         }
 
         footer {
             text-align: center;
             padding: 40px 20px;
-            color: #8b5a2b;
-            border-top: 1px solid rgba(101, 67, 33, 0.3);
+            color: #3d2813;
+            border-top: 2px solid rgba(101, 67, 33, 0.6);
             margin-top: 80px;
+            font-weight: bold;
         }
 
         @media (max-width: 768px) {
@@ -299,13 +313,13 @@
         <div class="album-section">
             <h2>Latest Release</h2>
             <div style="display: flex; flex-direction: column; align-items: center; gap: 30px; margin-bottom: 30px;">
-                <img src="boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.4);">
+                <img src="boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
                 <div style="text-align: center;">
                     <div class="album-title">The Boney Files</div>
                     <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
                 </div>
             </div>
-            <p style="color: #654321; font-size: 1.1rem; line-height: 1.8;">
+            <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8;">
                 Our debut album - a collection spanning years of creative evolution. This 10-track journey represents everything we are: progressive passages, experimental chaos, and yes, bovine defense anthems. Every listen reveals new layers, hidden jokes, and musical Easter eggs we buried for the dedicated listener.
             </p>
             <div class="album-details">
@@ -377,7 +391,7 @@
             <a href="#" class="social-link">Facebook</a>
             <a href="#" class="social-link">Email</a>
         </div>
-        <div style="text-align: center; margin-top: 40px; color: #654321; font-size: 1.1rem;">
+        <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.1rem; font-weight: bold;">
             <p>Support independent music. Every stream, share, and purchase keeps us creating.</p>
         </div>
     </section>
