Update video to Vimeo embed

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="video-container">
             <div class="video-title">The Search, What's in the Box?</div>
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/Xk8gTfT7JRI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/1126403069?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="The Search, What's in the Box?"></iframe>
             </div>
         </div>
     </section>
@@ -558,6 +558,7 @@
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
     </footer>
 
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
