Update origin story with COVID formation and correct year to 2020

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <header>
         <img src="murphy-logo.png" alt="The Murphy Experiment" class="logo">
         <div class="tagline">Progressive Rock</div>
-        <div class="location">Tempe, Arizona • Bangor, Northern Ireland | Est. 2022</div>
+        <div class="location">Tempe, Arizona • Bangor, Northern Ireland | Est. 2020</div>
         <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Listen on Bandcamp</a>
         <div class="scroll-indicator">▼</div>
     </header>
@@ -383,16 +383,20 @@
     <section id="origin">
         <h2>The Origin</h2>
         <div class="about-content">
-            <p>Some bands form in garages. Others in dive bars. The Murphy Experiment? Well, that's a story worth telling...</p>
+            <p>When the world stopped in 2020, The Murphy Experiment was born. While COVID-19 forced most musicians apart, it brought us together in an unexpected way.</p>
             <br>
-            <p>[Tell us your origin story! How did you all meet? What sparked The Murphy Experiment? How did The Plow Monsters come about? Replace this text with your actual story.]</p>
+            <p>The core musicians had played together over the years in various bands, scattered across different projects and different continents. But when the pandemic hit, something shifted. Technology had finally become good enough to bridge the distance between Tempe, Arizona and Bangor, Northern Ireland.</p>
+            <br>
+            <p>What started as a way to stay creative during lockdown became something bigger. Recording remotely across thousands of miles, exchanging tracks and ideas between time zones, we discovered a new kind of musical chemistry. The isolation that defined 2020 gave us the freedom to experiment without limits, to push boundaries without anyone watching.</p>
+            <br>
+            <p>The Murphy Experiment wasn't just born from COVID - it was born because of it. Proof that distance and circumstance can't stop musicians who are determined to create something uniquely unhinged.</p>
         </div>
     </section>
 
     <section id="about">
         <h2>About</h2>
         <div class="about-content">
-            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of Tempe, Arizona in 2022, we blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
+            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of a global pandemic in 2020, we blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
             <br>
             <p>Our sound careens from introspective melodies to full-throttle musical mayhem, always with a wink and a nod to the absurdity of it all.</p>
             <br>
@@ -554,7 +558,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 The Murphy Experiment | Tempe, Arizona</p>
+        <p>&copy; 2024 The Murphy Experiment | Tempe, Arizona • Bangor, Northern Ireland</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
     </footer>
 
