--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
         .members {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 30px;
             margin-top: 40px;
         }
@@ -344,6 +344,12 @@
             font-weight: bold;
         }
 
+        @media (max-width: 1024px) {
+            .members {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
         @media (max-width: 768px) {
             .logo {
                 max-width: 600px;
@@ -365,6 +371,10 @@
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 5px;
+            }
+
+            .members {
+                grid-template-columns: 1fr;
             }
         }
     </style>
