--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
             border-radius: 20px;
             border: 3px solid rgba(101, 67, 33, 0.6);
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-            margin-top: 40px;
+            margin: 40px auto;
+            max-width: 800px;
         }
 
         .video-wrapper {
@@ -375,6 +376,10 @@
 
             .members {
                 grid-template-columns: 1fr;
+            }
+
+            .video-container {
+                max-width: 100%;
             }
         }
     </style>
