Change all text from first person to third person

--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@
     <section id="origin">
         <h2>The Origin</h2>
         <div class="about-content">
-            <p>When the world stopped in 2020, The Murphy Experiment was born. While COVID-19 forced most musicians apart, it brought us together in an unexpected way.</p>
+            <p>When the world stopped in 2020, The Murphy Experiment was born. While COVID-19 forced most musicians apart, it brought this band together in an unexpected way.</p>
             <br>
             <p>The core musicians had played together over the years in various bands, scattered across different projects and different continents. But when the pandemic hit, something shifted. Technology had finally become good enough to bridge the distance between Tempe, Arizona and Bangor, Northern Ireland.</p>
             <br>
-            <p>What started as a way to stay creative during lockdown became something bigger. Recording remotely across thousands of miles, exchanging tracks and ideas between time zones, we discovered a new kind of musical chemistry. The isolation that defined 2020 gave us the freedom to experiment without limits, to push boundaries without anyone watching.</p>
+            <p>What started as a way to stay creative during lockdown became something bigger. Recording remotely across thousands of miles, exchanging tracks and ideas between time zones, they discovered a new kind of musical chemistry. The isolation that defined 2020 gave them the freedom to experiment without limits, to push boundaries without anyone watching.</p>
             <br>
             <p>The Murphy Experiment wasn't just born from COVID - it was born because of it. Proof that distance and circumstance can't stop musicians who are determined to create something uniquely unhinged.</p>
         </div>
@@ -414,13 +414,13 @@
     <section id="about">
         <h2>About</h2>
         <div class="about-content">
-            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of a global pandemic in 2020, we blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
+            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of a global pandemic in 2020, they blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
             <br>
-            <p>Our sound careens from introspective melodies to full-throttle musical mayhem, always with a wink and a nod to the absurdity of it all.</p>
+            <p>Their sound careens from introspective melodies to full-throttle musical mayhem, always with a wink and a nod to the absurdity of it all.</p>
             <br>
-            <p>When things get really out of hand, our sippy cup-beer drinking alter egos, The Plow Monsters, take the wheel. Fronted by the legendary Cowsick Steve and his bovine-defending anthems, The Plow Monsters prove that sometimes the best music comes from letting go of the steering wheel entirely.</p>
+            <p>When things get really out of hand, their sippy cup-beer drinking alter egos, The Plow Monsters, take the wheel. Fronted by the legendary Cowsick Steve and his bovine-defending anthems, The Plow Monsters prove that sometimes the best music comes from letting go of the steering wheel entirely.</p>
             <br>
-            <p>We make music for misfits, thinkers, and anyone who's ever thought "yeah, but what if we tried THIS instead?"</p>
+            <p>The Murphy Experiment makes music for misfits, thinkers, and anyone who's ever thought "yeah, but what if we tried THIS instead?"</p>
         </div>
     </section>
 
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8;">
-                Our debut album - a collection spanning years of creative evolution. This 10-track journey represents everything we are: progressive passages, experimental chaos, and yes, bovine defense anthems. Every listen reveals new layers, hidden jokes, and musical Easter eggs we buried for the dedicated listener.
+                The band's debut album - a collection spanning years of creative evolution. This 10-track journey represents everything they are: progressive passages, experimental chaos, and yes, bovine defense anthems. Every listen reveals new layers, hidden jokes, and musical Easter eggs buried throughout for the dedicated listener.
             </p>
             <div class="album-details">
                 <div class="detail-card">
@@ -578,7 +578,7 @@
             <a href="#" class="social-link">Email</a>
         </div>
         <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.1rem; font-weight: bold;">
-            <p>Support independent music. Every stream, share, and purchase keeps us creating.</p>
+            <p>Support independent music. Every stream, share, and purchase keeps them creating.</p>
         </div>
     </section>
 
