Add Too Far North video as second video in grid

--- a/index.html
+++ b/index.html
@@ -526,6 +526,13 @@
             </div>
 
             <div class="video-container">
+                <div class="video-title">Too Far North (To Get a Tan)</div>
+                <div class="video-wrapper">
+                    <iframe src="https://player.vimeo.com/video/1126666770?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Too Far North (To Get a Tan)"></iframe>
+                </div>
+            </div>
+
+            <div class="video-container">
                 <div class="video-title">Cow Theme Parks</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/940311827?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Cow Theme Parks"></iframe>
