Change tagline from Progressive Rock to Genre Fluid Rock

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Murphy Experiment | Progressive Rock from Tempe, AZ</title>
+    <title>The Murphy Experiment | Genre Fluid Rock from Tempe, AZ</title>
     <style>
         * {
             margin: 0;
@@ -397,7 +397,7 @@
 
     <header>
         <h1 class="logo">THE MURPHY EXPERIMENT</h1>
-        <div class="tagline">Progressive Rock</div>
+        <div class="tagline">Genre Fluid Rock</div>
         <div class="location">Tempe, Arizona • Bangor, Northern Ireland | Est. 2020</div>
         <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Listen on Bandcamp</a>
         <div class="scroll-indicator">▼</div>
