Move Videos button to appear after track listing

--- a/index.html
+++ b/index.html
@@ -469,6 +469,10 @@
                 <span class="track-duration">6:12</span>
             </div>
         </div>
+
+        <div style="text-align: center; margin-top: 40px;">
+            <a href="videos.html" class="cta-button">Watch Music Videos</a>
+        </div>
     </section>
 
     <section id="members">
@@ -517,7 +521,6 @@
         <h2>Connect</h2>
         <div class="social-links">
             <a href="https://themurphyexperiment.bandcamp.com/" class="social-link" target="_blank">Bandcamp</a>
-            <a href="videos.html" class="social-link">Videos</a>
             <a href="#" class="social-link">Instagram</a>
             <a href="#" class="social-link">Facebook</a>
             <a href="#" class="social-link">Email</a>
