Remove Origin and About sections, add About The Band button in header

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             display: inline-block;
             transition: all 0.3s;
             box-shadow: 0 5px 20px rgba(101, 67, 33, 0.4);
+            margin: 10px;
         }
 
         .cta-button:hover {
@@ -126,18 +127,6 @@
             text-align: center;
             text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
             font-weight: bold;
-        }
-
-        .about-content {
-            background: rgba(245, 230, 211, 0.95);
-            padding: 40px;
-            border-radius: 20px;
-            border: 3px solid rgba(101, 67, 33, 0.6);
-            backdrop-filter: blur(10px);
-            line-height: 1.8;
-            font-size: 1.1rem;
-            color: #1a1a1a;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
         .album-section {
@@ -332,10 +321,6 @@
                 font-size: 2rem;
             }
 
-            .about-content {
-                padding: 25px;
-            }
-
             .track {
                 flex-direction: column;
                 align-items: flex-start;
@@ -355,35 +340,12 @@
         <h1 class="logo">THE MURPHY EXPERIMENT</h1>
         <div class="tagline">Genre Fluid Rock</div>
         <div class="location">Tempe, Arizona • Bangor, Northern Ireland | Est. 2020</div>
-        <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Listen on Bandcamp</a>
+        <div>
+            <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Listen on Bandcamp</a>
+            <a href="about.html" class="cta-button">About The Band</a>
+        </div>
         <div class="scroll-indicator">▼</div>
     </header>
-
-    <section id="origin">
-        <h2>The Origin</h2>
-        <div class="about-content">
-            <p>When the world stopped in 2020, The Murphy Experiment was born. While COVID-19 forced most musicians apart, it brought this band together in an unexpected way.</p>
-            <br>
-            <p>The core musicians had played together over the years in various bands, scattered across different projects and different continents. But when the pandemic hit, something shifted. Technology had finally become good enough to bridge the distance between Tempe, Arizona and Bangor, Northern Ireland.</p>
-            <br>
-            <p>What started as a way to stay creative during lockdown became something bigger. Recording remotely across thousands of miles, exchanging tracks and ideas between time zones, they discovered a new kind of musical chemistry. The isolation that defined 2020 gave them the freedom to experiment without limits, to push boundaries without anyone watching.</p>
-            <br>
-            <p>The Murphy Experiment wasn't just born from COVID - it was born because of it. Proof that distance and circumstance can't stop musicians who are determined to create something uniquely unhinged.</p>
-        </div>
-    </section>
-
-    <section id="about">
-        <h2>About</h2>
-        <div class="about-content">
-            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of a global pandemic in 2020, they blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
-            <br>
-            <p>Their sound careens from introspective melodies to full-throttle musical mayhem, always with a wink and a nod to the absurdity of it all.</p>
-            <br>
-            <p>When things get really out of hand, their sippy cup-beer drinking alter egos, The Plow Monsters, take the wheel. Fronted by the legendary Cowsick Steve and his bovine-defending anthems, The Plow Monsters prove that sometimes the best music comes from letting go of the steering wheel entirely.</p>
-            <br>
-            <p>The Murphy Experiment makes music for misfits, thinkers, and anyone who's ever thought "yeah, but what if we tried THIS instead?"</p>
-        </div>
-    </section>
 
     <section id="album">
         <div class="album-section">
