--- a/index.html
+++ b/index.html
@@ -154,83 +154,6 @@
             font-weight: bold;
         }
 
-        .album-details {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-
-        .detail-card {
-            background: rgba(212, 197, 160, 0.9);
-            padding: 30px;
-            border-radius: 15px;
-            border: 2px solid rgba(101, 67, 33, 0.5);
-            transition: all 0.3s;
-        }
-
-        .detail-card:hover {
-            transform: translateY(-5px);
-            border-color: rgba(101, 67, 33, 0.8);
-            box-shadow: 0 10px 30px rgba(101, 67, 33, 0.3);
-        }
-
-        .detail-card h3 {
-            color: #3d2813;
-            margin-bottom: 15px;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .detail-card p {
-            color: #2a2a2a;
-            line-height: 1.6;
-        }
-
-        .tracklist {
-            background: rgba(245, 230, 211, 0.95);
-            padding: 30px;
-            border-radius: 15px;
-            border: 3px solid rgba(101, 67, 33, 0.6);
-            margin-top: 40px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        .track {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
-            border-bottom: 1px solid rgba(101, 67, 33, 0.3);
-            transition: all 0.3s;
-        }
-
-        .track:last-child {
-            border-bottom: none;
-        }
-
-        .track:hover {
-            background: rgba(212, 197, 160, 0.5);
-            padding-left: 25px;
-        }
-
-        .track-number {
-            font-weight: bold;
-            color: #5a3a1a;
-            min-width: 40px;
-        }
-
-        .track-title {
-            flex: 1;
-            color: #1a1a1a;
-            font-weight: bold;
-        }
-
-        .track-duration {
-            color: #5a3a1a;
-            font-weight: bold;
-        }
-
         .members {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -321,12 +244,6 @@
                 font-size: 2rem;
             }
 
-            .track {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 5px;
-            }
-
             .members {
                 grid-template-columns: 1fr;
             }
@@ -357,83 +274,14 @@
                     <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
                 </div>
             </div>
-            <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8;">
+            <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8; margin-bottom: 30px;">
                 The band's debut album - a collection spanning years of creative evolution. This 10-track journey represents everything they are: progressive passages, experimental chaos, and yes, bovine defense anthems. Every listen reveals new layers, hidden jokes, and musical Easter eggs buried throughout for the dedicated listener.
             </p>
-            <div class="album-details">
-                <div class="detail-card">
-                    <h3>10 Tracks</h3>
-                    <p>A complete sonic journey from start to finish</p>
-                </div>
-                <div class="detail-card">
-                    <h3>Released April 2024</h3>
-                    <p>Years in the making, crafted in available time</p>
-                </div>
-                <div class="detail-card">
-                    <h3>44 Minutes</h3>
-                    <p>Progressive rock with humor, heart, and a healthy dose of weird</p>
-                </div>
+            <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+                <a href="boney-files.html" class="cta-button">View Full Album Details</a>
+                <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Stream on Bandcamp</a>
+                <a href="videos.html" class="cta-button">Watch Music Videos</a>
             </div>
-            <br><br>
-            <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Stream The Boney Files</a>
-        </div>
-
-        <div class="tracklist">
-            <h3 style="color: #3d2813; text-align: center; margin-bottom: 20px; font-size: 1.8rem;">Track Listing</h3>
-            <div class="track">
-                <span class="track-number">1.</span>
-                <span class="track-title">The Search, What's in the Box?</span>
-                <span class="track-duration">1:08</span>
-            </div>
-            <div class="track">
-                <span class="track-number">2.</span>
-                <span class="track-title">Too Far North (To Get a Tan)</span>
-                <span class="track-duration">5:12</span>
-            </div>
-            <div class="track">
-                <span class="track-number">3.</span>
-                <span class="track-title">Making Sense</span>
-                <span class="track-duration">3:00</span>
-            </div>
-            <div class="track">
-                <span class="track-number">4.</span>
-                <span class="track-title">Thursdays</span>
-                <span class="track-duration">4:01</span>
-            </div>
-            <div class="track">
-                <span class="track-number">5.</span>
-                <span class="track-title">CFC Free (Cling Film Figurines) Live at Paddy's</span>
-                <span class="track-duration">4:37</span>
-            </div>
-            <div class="track">
-                <span class="track-number">6.</span>
-                <span class="track-title">Punch</span>
-                <span class="track-duration">4:12</span>
-            </div>
-            <div class="track">
-                <span class="track-number">7.</span>
-                <span class="track-title">Idle Bones</span>
-                <span class="track-duration">4:50</span>
-            </div>
-            <div class="track">
-                <span class="track-number">8.</span>
-                <span class="track-title">Climatize</span>
-                <span class="track-duration">7:31</span>
-            </div>
-            <div class="track">
-                <span class="track-number">9.</span>
-                <span class="track-title">Rock Paper Scissors</span>
-                <span class="track-duration">3:36</span>
-            </div>
-            <div class="track">
-                <span class="track-number">10.</span>
-                <span class="track-title">Cow Theme Parks</span>
-                <span class="track-duration">6:12</span>
-            </div>
-        </div>
-
-        <div style="text-align: center; margin-top: 40px;">
-            <a href="videos.html" class="cta-button">Watch Music Videos</a>
         </div>
     </section>
 
