Add backing vocalists credits for Cow Theme Parks

--- a/boney-files.html
+++ b/boney-files.html
@@ -358,6 +358,9 @@
             <p>Eden Meshida - Bass (CFC Free)</p>
             <p>Karen Shafer - Doors (The Search, What's in the Box?)</p>
             <p>Suki - Barks (The Search, What's in the Box?)</p>
+            <p>Clean the Plate Mojo - Backing Vocals (Cow Theme Parks)</p>
+            <p>Wreck the Mic Ange - Backing Vocals (Cow Theme Parks)</p>
+            <p>Veggie huggin' Val - Backing Vocals (Cow Theme Parks)</p>
         </div>
     </section>
 
