--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             font-family: 'Courier New', monospace;
             font-size: 4rem;
             font-weight: bold;
-            color: #7cb342;
+            color: #014208;
             margin-bottom: 20px;
             animation: pulse 2s infinite;
             text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
