--- a/videos.html
+++ b/videos.html
@@ -41,7 +41,7 @@
             font-family: 'Courier New', monospace;
             font-size: 3rem;
             font-weight: bold;
-            color: #3d2813;
+            color: #014208;
             margin-bottom: 10px;
             text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
             letter-spacing: 0.05em;
