--- a/videos.html
+++ b/videos.html
@@ -180,6 +180,13 @@
             </div>
 
             <div class="video-container">
+                <div class="video-title">Thursdays</div>
+                <div class="video-wrapper">
+                    <iframe src="https://player.vimeo.com/video/1126706301?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Thursdays"></iframe>
+                </div>
+            </div>
+
+            <div class="video-container">
                 <div class="video-title">Cow Theme Parks</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/940311827?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Cow Theme Parks"></iframe>
