Make Origin section more concise

--- a/about.html
+++ b/about.html
@@ -130,13 +130,9 @@
     <section id="origin">
         <h2>The Origin</h2>
         <div class="about-content">
-            <p>When the world stopped in 2020, The Murphy Experiment was born. While COVID-19 forced most musicians apart, it brought this band together in an unexpected way.</p>
+            <p>When COVID-19 hit in 2020, The Murphy Experiment was born. Musicians who had played together over the years across different bands and continents suddenly had the technology and time to collaborate remotely between Tempe, Arizona and Bangor, Northern Ireland.</p>
             <br>
-            <p>The core musicians had played together over the years in various bands, scattered across different projects and different continents. But when the pandemic hit, something shifted. Technology had finally become good enough to bridge the distance between Tempe, Arizona and Bangor, Northern Ireland.</p>
-            <br>
-            <p>What started as a way to stay creative during lockdown became something bigger. Recording remotely across thousands of miles, exchanging tracks and ideas between time zones, they discovered a new kind of musical chemistry. The isolation that defined 2020 gave them the freedom to experiment without limits, to push boundaries without anyone watching.</p>
-            <br>
-            <p>The Murphy Experiment wasn't just born from COVID - it was born because of it. Proof that distance and circumstance can't stop musicians who are determined to create something uniquely unhinged.</p>
+            <p>What started as a lockdown creative outlet became something bigger - proof that distance and circumstance can't stop musicians determined to create something uniquely unhinged.</p>
         </div>
     </section>
 
