Rewrite Origin section as future historian researching the pandemic

--- a/about.html
+++ b/about.html
@@ -130,9 +130,9 @@
     <section id="origin">
         <h2>The Origin</h2>
         <div class="about-content">
-            <p>When COVID-19 hit in 2020, The Murphy Experiment was born. Musicians who had played together over the years across different bands and continents suddenly had the technology and time to collaborate remotely between Tempe, Arizona and Bangor, Northern Ireland.</p>
+            <p><em>Historical Note: In the year 2020 CE, during what historians now call "The Great Pause," a respiratory pathogen designated COVID-19 forced the global population into isolation. Our research indicates that while this period devastated live performance industries, it paradoxically accelerated collaborative technology adoption.</em></p>
             <br>
-            <p>What started as a lockdown creative outlet became something bigger - proof that distance and circumstance can't stop musicians determined to create something uniquely unhinged.</p>
+            <p>The Murphy Experiment represents a fascinating case study from this era. Previously disconnected musicians spanning 6,797 kilometers between Tempe, Arizona and Bangor, Northern Ireland utilized primitive but effective digital audio transmission protocols to synthesize musical compositions in real-time across continental boundaries. What your ancestors called "lockdown" became their laboratory. The isolation that defined that period freed them to experiment without traditional industry constraints - a creative silver lining to an otherwise dark chapter in human history.</p>
         </div>
     </section>
 
