Change title to Case Study #1310: The Murphy Experiment

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
     </header>
 
     <section id="origin">
-        <h2>The Origin</h2>
+        <h2>Case Study #1310: The Murphy Experiment</h2>
         <div class="about-content">
             <p><em>Historical Note: In the year 2020 CE, during what historians now call "The Great Pause," a respiratory pathogen designated COVID-19 forced the global population into isolation. Our research indicates that while this period devastated live performance industries, it paradoxically accelerated collaborative technology adoption.</em></p>
             <br>
