Change to Case #1310: Musical Discovery with slightly smaller font

--- a/about.html
+++ b/about.html
@@ -84,6 +84,10 @@
             font-weight: bold;
         }
 
+        #origin h2 {
+            font-size: 2.2rem;
+        }
+
         .about-content {
             background: rgba(245, 230, 211, 0.95);
             padding: 40px;
@@ -114,6 +118,10 @@
                 font-size: 2rem;
             }
 
+            #origin h2 {
+                font-size: 1.8rem;
+            }
+
             .about-content {
                 padding: 25px;
             }
@@ -128,7 +136,7 @@
     </header>
 
     <section id="origin">
-        <h2>Case Study #1310: The Murphy Experiment</h2>
+        <h2>Case #1310: Musical Discovery</h2>
         <div class="about-content">
             <p><em>Historical Note: In the year 2020 CE, during what historians now call "The Great Pause," a respiratory pathogen designated COVID-19 forced the global population into isolation. Our research indicates that while this period devastated live performance industries, it paradoxically accelerated collaborative technology adoption.</em></p>
             <br>
